--- a/domino.csproj
+++ b/domino.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <ToolCommandName>my-tool</ToolCommandName>
+    <ToolCommandName>domino</ToolCommandName>
     <PackAsTool>True</PackAsTool>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Authors>Dillon Adams</Authors>
+    <PackageProjectUrl>https://github.com/DillonAd/Domino</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/DillonAd/Domino</RepositoryUrl>
+    <PackageTags>File Watcher</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
