Changing --version-suffix to be SemVer2.0.0 compliant

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ steps:
 - task: SonarSource.sonarcloud.38b27399-a642-40af-bb7d-9971f69712e8.SonarCloudPublish@1
   displayName: 'Publish Quality Gate Result'
 
-- script: 'dotnet pack --version-suffix $(Build.BuildNumber) --output $(Build.ArtifactStagingDirectory)' 
+- script: 'dotnet pack --version-suffix "snapshot.$(Build.BuildNumber)" --output $(Build.ArtifactStagingDirectory)' 
   displayName: 'Command Line Script - Package'
 
 - task: NuGetCommand@2
