--- a/domino.csproj
+++ b/domino.csproj
@@ -12,6 +12,10 @@
     <VersionPrefix>0.0.1</VersionPrefix>
     <VersionSuffix></VersionSuffix>
     <PackageLicenseUrl>https://github.com/DillonAd/Domino/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/DillonAd/Domino/master/domino.png</PackageIconUrl>
+    <AssemblyVersion>0.0.2.0</AssemblyVersion>
+    <FileVersion>0.0.2.0</FileVersion>
+    <Version>0.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
