--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,16 @@ steps:
     command: restore
     projects: '$(Parameters.RestoreBuildProjects)'
 
+- task: SonarSource.sonarcloud.14d9cde6-c1da-4d55-aa01-2965cd301255.SonarCloudPrepare@1
+  displayName: 'Prepare analysis on SonarCloud'
+  inputs:
+    SonarCloud: Domino
+    organization: 'dillonad-github'
+    projectKey: 'DillonAd_Domino'
+    projectName: Domino
+    extraProperties: |
+     sonar.cs.opencover.reportsPaths="$(Build.SourcesDirectory)\opencover.xml"
+
 - task: DotNetCoreCLI@2
   displayName: Build
   inputs:
@@ -27,6 +37,16 @@ steps:
     command: test
     projects: '**/*Test*/*.csproj'
     arguments: '--configuration $(BuildConfiguration) --filter "Category=unit" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=$(Build.SourcesDirectory)/opencover.xml '
+
+- task: SonarSource.sonarcloud.ce096e50-6155-4de8-8800-4221aaeed4a1.SonarCloudAnalyze@1
+  displayName: 'Run Code Analysis'
+  # This will fail on PR builds https://go.microsoft.com/fwlink/?linkid=862029
+  continueOnError: true
+  
+- task: SonarSource.sonarcloud.38b27399-a642-40af-bb7d-9971f69712e8.SonarCloudPublish@1
+  displayName: 'Publish Quality Gate Result'
+  # This will fail on PR builds https://go.microsoft.com/fwlink/?linkid=862029
+  continueOnError: true
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: source'
