--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,49 +1,59 @@
 ﻿name: $(Build.BuildId)
-resources:
-- repo: self
-queue:
-  name: Hosted VS2017
+
+pool: Default
+
+trigger:
+ - master
+pr: none
 
 variables:
   buildConfiguration: 'Release'
-  Parameters.RestoreBuildProjects: ''
+  Parameters.Solution: '$(Build.SourcesDirectory)/domino.sln'
 
 steps:
+
+- task: DotNetCoreInstaller@0
+  inputs:
+    version: 2.1.400
+
 - task: DotNetCoreCLI@2
   displayName: Restore
   inputs:
     command: restore
-    projects: '$(Parameters.RestoreBuildProjects)'
+    projects: '$(Parameters.Solution)'
 
-- task: SonarSource.sonarcloud.14d9cde6-c1da-4d55-aa01-2965cd301255.SonarCloudPrepare@1
+- task: SonarCloudPrepare@1
   displayName: 'Prepare analysis on SonarCloud'
   inputs:
     SonarCloud: Domino
     organization: 'dillonad-github'
+    scannerMode: 'MSBuild'
     projectKey: 'DillonAd_Domino'
     projectName: Domino
-    extraProperties: |
-     sonar.cs.opencover.reportsPaths="$(Build.SourcesDirectory)\opencover.xml"
+    extraProperties: 'sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/opencover.xml'
 
 - task: DotNetCoreCLI@2
   displayName: Build
   inputs:
-    projects: '$(Parameters.RestoreBuildProjects)'
+    projects: '$(Parameters.Solution)'
     arguments: '--configuration $(BuildConfiguration) --no-restore'
 
 - task: DotNetCoreCLI@2
   displayName: Test
   inputs:
     command: test
-    projects: '**/*Test*/*.csproj'
-    arguments: '--configuration $(BuildConfiguration) --filter "Category=unit" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=$(Build.SourcesDirectory)/opencover.xml '
+    projects: '$(Parameters.Solution)'
+    arguments: '--configuration $(BuildConfiguration) --filter "Category=unit" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=$(Build.SourcesDirectory)/opencover.xml /p:Exclude="[xunit.*]*"'
 
-- task: SonarSource.sonarcloud.ce096e50-6155-4de8-8800-4221aaeed4a1.SonarCloudAnalyze@1
+
+- task: SonarCloudAnalyze@1
   displayName: 'Run Code Analysis'
   # This will fail on PR builds https://go.microsoft.com/fwlink/?linkid=862029
   continueOnError: true
-  
-- task: SonarSource.sonarcloud.38b27399-a642-40af-bb7d-9971f69712e8.SonarCloudPublish@1
+
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
   displayName: 'Publish Quality Gate Result'
   # This will fail on PR builds https://go.microsoft.com/fwlink/?linkid=862029
   continueOnError: true
