--- a/Domino/domino.csproj
+++ b/Domino/domino.csproj
@@ -16,7 +16,15 @@
     <AssemblyVersion>0.0.5.0</AssemblyVersion>
     <FileVersion>0.0.5.0</FileVersion>
     <Version>0.0.5</Version>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <None Remove=".gitignore" />
