--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ stages:
         steps:
           - task: DotNetCoreInstaller@0
             inputs:
-              version: 2.2.401
+              version: 3.1.x
   
           - task: DotNetCoreCLI@2
             displayName: Restore
