--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,9 +19,15 @@ stages:
             buildConfiguration: 'Release'
             Parameters.Solution: '$(Build.SourcesDirectory)/domino.sln'
         steps:
-          - task: DotNetCoreInstaller@0
+          - task: UseDotNet@2
             inputs:
-              version: 3.1.407
+              packageType: 'sdk'
+              version: '3.1.x' 
+
+          - task: UseDotNet@2
+            inputs:
+              packageType: 'sdk'
+              version: '2.1.x' 
   
           - task: DotNetCoreCLI@2
             displayName: Restore
