--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,8 @@ stages:
   - stage: Build
     jobs:
       - job: Build
+        workspace:
+          clean: all
         pool: Default
         variables:
             buildConfiguration: 'Release'
